# fs-football-fork

./: .gitignore  README.md  pyproject.toml  requirements.txt
flashscore/: base.py  converter.py
recons/: core_2_2276000000.js  framework.3391317.js  index.html  index.html.1  internalTools.5d41de3.js  loader.dea7249.js
src/flashscore/: api.py  base.py  converter.py  country.py  exceptions.py  league.py  match.py  season.py
