[project]
name = "fs-football-fork"
version = "0.1.0"
description = "Fetch football data from FlashScore.com."
readme = "README.md"
license="Unlicense"
authors = [
    { name = "smartwa", email = "smartwacaleb@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "about-time>=4.2.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.1",
    "aiosignal>=1.4.0",
    "alive-progress>=3.3.0",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "frozenlist>=1.8.0",
    "gevent>=25.9.1",
    "grapheme>=0.6.0",
    "graphemeu>=0.7.2",
    "greenlet>=3.2.4",
    "grequests>=0.7.0",
    "idna>=3.11",
    "multidict>=6.7.0",
    "propcache>=0.4.1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "soupsieve>=2.8",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "yarl>=1.22.0",
    "zope-event>=6.0",
    "zope-interface>=8.0.1",
]

[project.urls]
homepage = "https://github.com/Simatwa/fs-football-fork"
repository = "https://github.com/Simatwa/fs-football-fork"
documentation = "https://github.com/Simatwa/fs-football-fork"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flashscore"]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "coverage-badge>=1.1.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.8",
]

[tool.ruff]
preview = true
line-length = 85

[tool.ruff.lint]
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
extend-select =     [
    "UP045",
    "UP035",
]

ignore = [
    "UP031",  # https://docs.astral.sh/ruff/rules/printf-string-formatting/
    "F401"    # https://docs.astral.sh/ruff/rules/unused-import
]

[tool.ruff.lint.isort]
combine-as-imports = true
